Made some additional sections for the other topics to be covered in the workshop

--- a/tutorial/slides/tutorial-slides.html
+++ b/tutorial/slides/tutorial-slides.html
@@ -61,7 +61,7 @@
                     <li>Integrate into ADF</li>
                   </ul>
                 </li>
-                <li>Convex Hull</li>
+                <!--li>Convex Hull</li-->
               </ul>
             </li>
           </ol>
@@ -95,6 +95,70 @@
               </ul>
             </li>
           </ol>
+        </section>
+      </section>
+      <section>
+        <section>
+          <h2>Introduction of AI and Machine Learning (ML)</h2>
+          <ul>
+            <li>AI and Machine Learning Techniques
+              <ul>
+                <li>Supervised</li>
+                <li>Unsupervised</li>
+              </ul>
+            </li>
+        </section>
+      </section>
+      <section>
+        <section>
+            <h2>AI and Machine Learning Techniques in RCRS</h2>
+        </section>
+      </section>
+      <section>
+        <section>
+            <h2>AI for Precomputation</h2>
+              <ul>
+                <li>Path Planning (A*, Dijkstra)
+                  <ul>
+                    <li>Graph creation and visualization in MATLAB</li>
+                    <li>Integrate into ADF</li>
+                  </ul>
+                </li>
+                <!--li>Convex Hull</li-->
+              </ul>
+            </li>
+          </ol>
+        </section>
+      </section>
+      <section>
+        <section>
+            <h2>Machine Learning for Precomputation</h2>
+              <ul>
+                <li>Clustering (K-Means++)
+                  <ul>
+                    <li>Type and collection of data</li>
+                    <li>Visualize using MATLAB</li>
+                    <li>Integrate into ADF</li>
+                  </ul>
+                </li>
+              </ul>
+        </section>
+      </section>
+      <section>
+        <section>
+            <h2>Methodology for Target Selection</h2>
+              <ul>
+                <li>Target selection model
+                  <ul>
+                    <li>Traditional Machine Learning (SVM)</li>
+                    <li>Deep Learning</li>
+                  </ul>
+                </li>
+                <li>Collect data</li>
+                <li>Train model in MATLAB</li>
+                <li>Integrate into ADF</li>
+                <li>Refine the target selection model</li>
+              </ul>
         </section>
       </section>
 
