Added some path-planning slides and added some comments to AStarPathPlanning

--- a/tutorial/slides/tutorial-slides.html
+++ b/tutorial/slides/tutorial-slides.html
@@ -175,7 +175,7 @@
 <li>A problem-solving agent applies a <i>search strategy</i> on the problem:
 
 <div align=center>
-<img src=images/simple-problem-solving-agent.png width=600>
+<img src=images/simple-problem-solving-agent.png width=800>
 </div>
 
 <li>So, we need a problem formulation <small>(both in Java and MATLAB)</small>.
@@ -252,9 +252,48 @@ That is where the <i>search strategy</i> gets important<br>
 </ul>
 
 </section>
+<section>
+<h3>A* Graph Search</h3>
+
+<p>
+
+<ul>
+<li>The Agent Development Framework has an A* implementation:
+
+<div align=center>
+<img src=images/EclipseUniformCostSearch.png width=900>
+</div>
+The problem is solved in 9 steps.
+</ul>
+
+<p>
+
+ <small>This Java code is provided by Shunki Takami <i>et al.</i></small>
+
+</section>
+
+<section>
+<h3>A* Graph Search</h3>
+
+<p>
+
+<ul>
+<li>The steps resembles Uniform-Cost Search:
+
+<div align=center>
+<img src=images/UniformCostSearch.png width=900>
+</div>
+With a heuristic cost function <font style="font-variant: small-caps">Path-Cost</font> this is A* <br>
+(with path so-far it is Dijkstra's algorithm).
+</ul>
+
+<p>
+
+ <small>Illustration courtesy Stuart Russell and Peter Norvig, <i>Artificial Intelligence - a Modern Approach</i>, Pearson.</small>
+
+</section>
 
       <!-- ========================================================= -->
-      </section>
       <section>
         <section>
             <h2>Machine Learning for Precomputation</h2>
