Added a motivation slide (why doing path-planning with MATLAB).

--- a/tutorial/slides/tutorial-slides.html
+++ b/tutorial/slides/tutorial-slides.html
@@ -292,7 +292,27 @@ With a heuristic cost function <font style="font-variant: small-caps">Path-Cost<
  <small>Illustration courtesy Stuart Russell and Peter Norvig, <i>Artificial Intelligence - a Modern Approach</i>, Pearson.</small>
 
 </section>
+<section>
+<h3>Multi-Agent decision making</h3>
 
+<p>
+
+<ul>
+<li>The actions of the agents are parameterized with the paths.
+
+<div align=center>
+<img src=images/Mircea-Figure1.1.png width=500>
+</div>
+<li>You need full control and insight in the characteristics of the paths.
+</ul>
+
+<p>
+
+ <small>Illustration courtesy Mircea Traichioiu, <i>Hierarchical Decision Theoretic Planning for RoboCup Rescue Agent Simulation</i>, Master thesis, University of Amsterdam, 2014.</small>
+
+</section>
+
+      </section>
       <!-- ========================================================= -->
       <section>
         <section>
