Displayed the two alternative paths with PGraph.highlight_path

--- a/tutorial/slides/tutorial-slides.html
+++ b/tutorial/slides/tutorial-slides.html
@@ -329,7 +329,7 @@
 <li>You not only have to find one solution:
 
 <div align=center>
-<img src=images/topo_paths.png width=600>
+<img src=images/test_two_paths.jpg width=600>
 </div>
 
 <li>You also have to decide what is the best solution.
