First extra slides on ML in RCRS

--- a/tutorial/slides/tutorial-slides.html
+++ b/tutorial/slides/tutorial-slides.html
@@ -245,18 +245,45 @@
 	  <!-- AI and ML in RCRS -->
       <section>
         <section>
-            <h2>AI and Machine Learning Techniques in RCRS</h2>
+            <h2>AI and Machine Learning Techniques in the RoboCup Rescue Simulation League</h2>
         </section>
+        <section>
+            <h2>AI tasks</h2>
+
+            <ul>
+            <li>Task allocation with uncertainty
+            <li>Coalition formation
+            <li>Co-operation
+            <li>Distributed versus centralized control
+            <li>Communication
+            </ul>
+
+ <small>Courtesy Kitano <i>et al</i>, IEEE SMC'99.</small>
+        </section>
+        <section>
+            <h2>Task allocation with uncertainty</h2>
+
+            <ul>
+            <li>The assignment problem can be formulated as follows:
+            <ul>
+            <li>A set <i>J</i> of tasks to be allocated to a set <i>I</i> of agents
+            <li>Communication
+            </ul>
+            </ul>
+
+ <small>Courtesy Ferreira <i>et al</i>, AAMAS'10.</small>
+        </section>
+      <!-- ========================= TBC  ========================== -->
       </section>
       <section>
         <section>
             <h2>AI for Precomputation</h2>
               <ul>
-                <li>Path Planning (A*, Dijkstra)
-                  <ul>
+                <li>Path Planning (A*, Dijkstra, depth-first)
+                  <!--ul>
                     <li>Graph creation and visualization in MATLAB</li>
                     <li>Integrate into ADF</li>
-                  </ul>
+                  </ul-->
                 </li>
                 <!--li>Convex Hull</li-->
               </ul>
@@ -701,8 +728,6 @@ This is now your assignment!
 
 </section>
 
-
-      <!-- ========================= TBC  ========================== -->
 
       </section>
       <!-- ========================================================= -->
