--- a/tutorial/slides/tutorial-slides.html
+++ b/tutorial/slides/tutorial-slides.html
@@ -258,7 +258,7 @@
             <li>Communication
             </ul>
 
- <small>Courtesy Kitano <i>et al</i>, IEEE SMC'99.</small>
+ <small>Courtesy Skinner <i>et al</i>, AAMAS'10.</small>
         </section>
         <section>
             <h2>Task allocation with uncertainty</h2>
@@ -267,7 +267,12 @@
             <li>The assignment problem can be formulated as follows:
             <ul>
             <li>A set <i>J</i> of tasks to be allocated to a set <i>I</i> of agents
-            <li>Communication
+            <li>Each agent <i>i</i> has a capability <i>k<sub>ij</sub> (0 ≤ k<sub>ij</sub> ≤ 1)</i> to perform each task <i>j</i>
+            <li>An allocation matrix <i>A</i> is used to represent the allocation, where <i>a<sub>ij</sub></i> is 1 if task <i>j</i> is allocated to agent <i>i</i> and 0 otherwise.
+<div align=center>
+<img src=images/TaskAllocationFormula.png width=200>
+</div>
+
             </ul>
             </ul>
 
