Added pathplanning code in six steps

--- a/tutorial/slides/tutorial-slides.html
+++ b/tutorial/slides/tutorial-slides.html
@@ -245,7 +245,7 @@
 	  <!-- AI and ML in RCRS -->
       <section>
         <section>
-            <h2>AI and Machine Learning Techniques in the RoboCup Rescue Simulation League</h2>
+            <h2>AI and ML Techniques in the <br> RoboCup Rescue Simulation League</h2>
         </section>
         <section>
             <h2>AI tasks</h2>
@@ -261,7 +261,7 @@
  <small>Courtesy Skinner <i>et al</i>, AAMAS'10.</small>
         </section>
         <section>
-            <h2>Task allocation with uncertainty</h2>
+            <h2>Task allocation</h2>
 
             <ul>
             <li>The assignment problem can be formulated as follows:
@@ -270,7 +270,7 @@
             <li>Each agent <i>i</i> has a capability <i>k<sub>ij</sub> (0 ≤ k<sub>ij</sub> ≤ 1)</i> to perform each task <i>j</i>
             <li>An allocation matrix <i>A</i> is used to represent the allocation, where <i>a<sub>ij</sub></i> is 1 if task <i>j</i> is allocated to agent <i>i</i> and 0 otherwise.
 <div align=center>
-<img src=images/TaskAllocationFormula.png width=200>
+<img src=images/TaskAllocationFormula.png width=400>
 </div>
 
             </ul>
