Last correction (missing bracket)

--- a/tutorial/slides/tutorial-slides.html
+++ b/tutorial/slides/tutorial-slides.html
@@ -1226,7 +1226,7 @@
           <ul>
           <li>Problem solving
              <ul>
-             <li>Path-planning <small(Astar, Dijkstra)</small)
+             <li>Path-planning <small>(Astar, Dijkstra)</small>
              </ul> 
           <li>Unsupervised learning:
              <ul>
